--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"author": "Chris Kark",
 	"license": "MIT",
 	"devDependencies": {
-		"@figma/plugin-typings": "*",
+		"@figma/plugin-typings": "^1.57.1",
 		"prettier": "*",
 		"typescript": "*"
 	},
