--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "griddle",
 	"version": "1.0.0",
-	"description": "Your Figma Plugin",
+	"description": "Organize any number of elements into a grid based on the number of columns and gap between them.",
 	"main": "code.js",
 	"scripts": {
 		"build": "tsc -p tsconfig.json"
