--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,12 @@
 	"name": "Griddle",
 	"id": "1129518088088100039",
 	"api": "1.0.0",
+	"documentAccess": "dynamic-page",
 	"main": "code.js",
 	"editorType": ["figjam", "figma"],
+	"networkAccess": {
+		"allowedDomains": ["none"]
+	},
 	"parameterOnly": true,
 	"parameters": [
 		{
