--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"target": "esnext",
 		"lib": ["esnext"],
-		"typeRoots": ["./node_modules/@types", "./node_modules/@figma"]
+		"typeRoots": ["./node_modules/@types", "./node_modules/@figma"],
+		"skipLibCheck": true
 	}
 }
